# face-categorizer

./: Cargo.toml  compose.yaml
src/: embedder.rs  face.rs  image.rs  main.rs
